	Unlocked after beating the "normal" Final Utopia.
& Fixed a bug where Motorhead enemies would not die in one uncharged Charge Blast shot from Spark
+ Nerfed Magnet Dash's maximum effectiveness while making it more consistent in effectiveness when used at high speeds
+ Fixed bug where Fark and Reaper Jester could dash through certain barriers
+ Moved tips and hints to 2 unique menus in Shopalo's shop
& Fixed bug that caused bosses to not behave correctly - some attacks bosses were canceling should now work properly
+ New, more accurate combo meter multiplier UI
& Fixed bug where score medals on some stages did not work correctly
+ Fixed bug where hitting a pulley above it max speed sets you to its min speed
+ Made it so "unreachable" score and speed medals don't show up on the menus

The following stages have new speed targets:
Lost Riviera
Lost Ravine
Beatdown Tower
Arid Hole
Splash Grotto
High Speeds (tutorial)
Wall Jump (tutorial)
Wall Walking (tutorial)

The following stages have new score targets:
Lost Riviera
Lost Ravine
Canyon Zero

The following stages have some exploration medals moved:
Lost Riviera
Lost Ravine

Release 0.3.1
+ Made pulley pillars not have collision if the pulley is there, so you can't hit it and lose your speed
& Fixed regression when removing unobtainable medals - all stages will now show both best score and time, and the current score and time will be shown after levels

Release 0.3.2
& Fixed code failure from enum change
+ Un-nerfed Fark's static mode
+ Banned the 3 new DLC items in the shop
+ Fixed spark and sfarx's shots sometimes colliding with the ground when shooting upwards
+ Fixed Fark and Reaper Jester "drifting" when using blink when not holding down the analog stick
& Fixed Split Utopia Shelter not unlocking after new update
+ Fixed softlock in Throwback boss fight from beating Double and then RYNO

Release 0.4.0 [Pending]
+ Gave Float a charge shot move