@@ -105,3 +105,13 @@ Release 0.3.2
 
 Release 0.4.0 [Pending]
 + Gave Float a charge shot move
++ Made the order of dropped items from enemies the same every level run, to make score runs consistent
++ Fixed exploit that caused you to gain more speed then you should when tapping charged dash very quickly
++ Fixed bug where spark would lose the ability to down dash again if a down dash is cancelled in the first few frames
++ Added speed and score targets to the world map stage menu
+
+The following stages have new speed targets:
+
+The following stages have new score targets:
+
+The following stages have some exploration medals moved:
